<resources>
    <!-- Basic -->
    <string name="app_name" translatable="false">Schedule App</string>
    <string name="test_string" translatable="false">Test</string>
    <string name="test_number" translatable="false">4</string>
    <string name="test_symbol" translatable="false">N</string>
    <string name="course">Course</string>
    <string name="group">Group</string>
    <string name="choose_course">Select a course</string>
    <string name="choose_group">Select a group</string>

    <!-- Arrays -->
    <string-array name="type_of_week">
        <item>@string/numerator</item>
        <item>@string/denominator</item>
    </string-array>

    <string-array name="spinner_course">
        <item>Первый</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвёртый</item>
    </string-array>

    <string-array name="spinner_first_course">
        <item>МОСб-211</item>
        <item>МОСб-212</item>
    </string-array>

    <string-array name="spinner_second_course">
        <item>МОСб-201</item>
        <item>МОСб-202</item>
    </string-array>

    <string-array name="spinner_third_course">
        <item>МОСб-191</item>
        <item>МОСб-192</item>
    </string-array>

    <string-array name="spinner_fourth_course">
        <item>МОСб-181</item>
        <item>МОСб-182</item>
    </string-array>

    <!-- OnBoarding fragments -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="onboarding_first_title">Your schedule, anywhere</string>
    <string name="onboarding_first_under_title">There is nothing more to remember</string>
    <string name="onboarding_second_choose_group">Select your study group</string>
    <string name="onboarding_third_title">All done. Enjoy!</string>
    <string name="onboarding_third_under_title">You can always change something in the application settings</string>

    <!-- Week fragment -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="numerator">Numerator</string>
    <string name="denominator">Denominator</string>
    <string name="test_date">October 24, 2021</string>
    <string name="home">Home</string>
    <string name="days_of_the_week">Days of the week</string>
    <string name="advantage_title">Your schedule</string>
    <string name="advantage_description">Having difficulties with the application,\nor do you have ideas for further updates?\n\nContact me!</string>
    <string name="advantage_symbol_news">N</string>
    <string name="advantage_symbol_information">I</string>
    <string name="test_day_of_week">Monday</string>

    <!-- Settings fragment -->
    <string name="common">Common</string>
    <string name="settings">Settings</string>

    <!-- Day detail fragment-->
    <string name="day_detail_error_empty_database">Select a group in the app settings!</string>
    <string name="test_subject_name" translatable="false">Технология разработки программного обеспечения (1-ая группа)</string>
    <string name="test_subject_info" translatable="false">Григорьева А.Г., лекция, дистанционно</string>
    <string name="test_subject_time" translatable="false">13:40 \- 15:10</string>
    <string name="test_subject_classroom" translatable="false">4.29Г</string>

    <!-- Splash screen fragment -->
    <string name="copyright" translatable="false">Copyright @ 2021 | onesector</string>

    <!-- About app fragment -->
    <string name="about_app">About app</string>
    <string name="nickname_caps" translatable="false">ONESECTOR</string>
    <string name="my_skills" translatable="false">Android developer</string>
    <string name="telegram_link" translatable="false">https://t.me/onesector</string>
    <string name="email_link" translatable="false">onesector.dev@gmail.com</string>
    <string name="vk_link" translatable="false">https://vk.com/onesector</string>
</resources>